Fixed 'Overflow on X axis make a scrollbar'

--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 @import url("./fonts/AdventPro-Regular/AdventPro-Regular.css");
 
 html {
@@ -9,13 +10,17 @@ body {
     margin: 0px;
 }
 
+
+
 #content {
-    position: relative;
-    height: 90%;
+    position: fixed;
+    height: 90vh;
     width: 100%;
     background-color: rgba(0,0,64,1);
     font-family: "Advent Pro", sans-serif;
     letter-spacing: 1px;
+    overflow-wrap: break-word;
+    overflow-y: scroll;
 }
 #msgBox {
     list-style: none;
@@ -42,9 +47,11 @@ body {
     font-weight: 600;
 }
 
+
+
 #bottom {
     position: fixed;
-    height: 10%;
+    height: 10vh;
     width: 100%;
     background-color: seagreen;
     bottom: 0;
